--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,12 @@ code {
 
 .nav-link {
   margin-left: 30px;
+  color: #000;
+  transition: color 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #007bff;
 }
 
 #supportHero {
@@ -21,7 +27,7 @@ code {
   color: white;
 }
 
-#supportHero a{
+#supportHero a {
   color: white;
 }
 
@@ -134,9 +140,8 @@ span a {
   background-color: rgba(0, 212, 255, 1);
 }
 
-
-@media only screen and (max-width: 1200px){
-  .home_page{
+@media only screen and (max-width: 1200px) {
+  .home_page {
     font-size: 1.5rem;
   }
   .home_page button {
